<resources>
    <string name="app_name">Songle</string>
    <string name="title_home">Welcome to Songle!</string>
    <string name="title_playGame">Play Game</string>
    <string name="title_songs">Songs</string>
    <string name="title_activity_maps">Map</string>
    <string name="LEVEL1">Easy</string>
    <string name="LEVEL2">Normal</string>
    <string name="LEVEL3">Hard</string>
    <string name="LEVEL4">Insane</string>
    <string name="LEVEL5">Impossible</string>
    <string name="SONYLYRICS">Song Lyrics</string>
    <string name="EXPLAINGAME">"FAQ's"</string>
    <string name="SCORE">"SCORE BOARD"</string>
    <string name="MUSIC">Listen on Youtube!</string>
    <string name="GUESSTHESONG">Guess the song!</string>
    <string name="title_activity_how_to_play">HowToPlay</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_android_maps">Map</string>
    <string name="title_activity_correct_guess_screen">CorrectGuessScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_correct_splash">CorrectSplash</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="large_text">
        "Frequently asked questions \n\n\n"

        "Question: What is the difference between the different levels?\n"
        "Answer \n"
        "Each level has a different amounts of words and amount of categorization of the words and timer length. \n\n"
        "EASY - 100% OF THE WORDS, 4 Categories and 20 minutes \n"
        "NORMAL - 100% OF THE WORDS, 3 Categories and 18 minutes \n "
        "HARD - 75% OF THE WORDS, 3 Categories and 16 minutes \n"
        "INSANE - 50% OF THE WORDS, 2 Categories and 14 minutes \n"
        "IMPOSSIBLE - 25% OF THE WORDS, 0 Categories and 12 minutes \n\n\n"

        "Question: How many attempts do I get to guess the song? \n"
        "Answer:\n"
        "You get 5 attempts, regardless if you play timed or not \n\n\n"

        "Question: How is the score calculated? \n"
        "Answer:\n"
        "Each "success" at the different levels contributes in the following way
        Easy - 1 points per success \n
        Medium - 2 points per success \n
        Hard - 3 points per success \n
        Insane - 4 points per success \n
        Impossible - 5 points per success \n\n
        If you played timed you will also get extra "Timed bonus" points \n
        Easy - 1 points timed bonus per success \n
        Medium - 2 points timed bonus per success \n
        Hard - 3 points timed bonus per success \n
        Insane - 4 points timed bonus per success \n
        Impossible - 5 points timed bonus per success \n

        \n\n\n"
        "Question: What do I need to play this game? \n"
        "Answer:\n"
        "You need a working data connection (preferably 4G for speed) and GPS enabled,
        you must also give the app permission for location services \n\n\n"

        "Question: How many songs are there? \n"
        "Answer:\n"
        "Currently there are 22 songs, although we are adding new songs all the time!
        Don't worry, the app will update automatically when this happens, you will also be notified when their are new songs :-)\n\n\n"


        "Question: Can this app work offline? \n"
        "Answer:\n"
        "Not exactly, if you have a connection until the markers are in place that is fine, but you can only complete that game,
        You cannot load another game - including reloading the same level - unless you have a data connection, you also need location
        services at all times (otherwise its not much of a location puzzle game). Its recommended you have a 4G data connection and GPS on
        at all times
        \n\n\n"

        "Question: I am still having issues/how do I give feedback? \n"
        "Answer:\n"
        "Please email me on my email address or call me on my business line: \n
         Email: mahbub@iftekhar.co.uk \n
         Phone: +44 131 581 8775 \n(9am - 6pm , Mon - Sat) \n
        \n
        I will be happy to get feedback and or help you with any issues you may be having. Please allow 2 working days for a reply by email.
        Please note all calls are recorded for monitoring purposes
        \n\n\n"


    </string>
    <string name="total_score">Total Score:</string>
    <string name="score_overview">SCORE OVERVIEW</string>
    <string name="listen_on_youtube">LISTEN ON YOUTUBE</string>
    <string name="same_level">PLAY SAME LEVEL</string>
    <string name="next_level">PLAY NEXT LEVEL</string>
    <string name="great_job">Well Done</string>
    <string name="song_lyrics">SONG LYRICS</string>
    <string name="try_again">Sorry, try again!</string>
    <string name="please_check_your_network_connection">Please check your network connection</string>
    <string name="home">Home</string>
    <string name="you_required_gps_and_4g_3g_turned_on">Turn on 3G/4G, then click "Home" \n You also require GPS to be enabled</string>
    <string name="aubergine">AUBERGINE</string>
    <string name="night">NIGHT</string>
    <string name="dark">DARK</string>
    <string name="retro">RETRO</string>
    <string name="silver">SILVER</string>
    <string name="standard">STANDARD</string>
    <string name="guess_the_song">GUESS THE SONG!!</string>
    <string name="map_style">MAP STYLE</string>
    <string name="score_board">SCORE BOARD</string>
    <string name="welcome_to_songle">Welcome to Songle!</string>
    <string name="score">SCORE</string>
    <string name="home_BUTTON">HOME</string>
    <string name="timed_bonus">Timed bonus</string>
</resources>
