<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2072A4"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp"
        android:background="#2072A4"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:text="Welcome to Songle!"
            android:textAlignment="center"
            android:textColor="#f5f5f5"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/LEVEL1_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/LEVEL1" />

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/LEVEL2_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/LEVEL2" />

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/LEVEL3_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/LEVEL3" />

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/LEVEL4_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/LEVEL4" />

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/LEVEL5BUTTON"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/LEVEL5" />

        <View
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/MUSICBUTTON"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/MUSIC" />

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/SONGLYRICS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/SONYLYRICS" />

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/SCORE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="SCORE BOARD" />

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/HOWTOPLAY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/EXPLAINGAME" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1" />


    </LinearLayout>
</ScrollView>
