<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2072A4"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp"
        android:background="#2072A4"
        android:orientation="vertical">


        <TextView
            android:id="@+id/currentMAPSTYLE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:textAlignment="center"
            android:textColor="#f5f5f5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/STYLE1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/standard" />

        <View
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/STYLE2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/silver" />

        <View
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/STYLE3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/retro" />

        <View
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/STYLE4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/dark" />

        <View
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/STYLE5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/night" />

        <View
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/STYLE6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonxml"
            android:padding="10dp"
            android:text="@string/aubergine" />

    </LinearLayout>
</ScrollView>
