<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2072A4"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp"
        android:background="#2072A4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:text="@string/please_check_your_network_connection"
            android:textAlignment="center"
            android:textColor="#f5f5f5"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/you_required_gps_and_4g_3g_turned_on"
            android:textAlignment="center"
            android:textColor="#f5f5f5"
            android:textSize="20sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/NETWORKISSUEBUTTON"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonxml"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="#000000" />

        <View
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/SCOREBOARD"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonxml"
            android:text="@string/SCORE"
            android:textAlignment="center"
            android:textColor="#000000" />

        <View
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/HOWTOPLAYNETWORKISSUE"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonxml"
            android:text="@string/title_activity_faq"
            android:textAlignment="center"
            android:textColor="#000000" />
        <View
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/MAPSTYLESELECTOR"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonxml"
            android:text="@string/map_style"
            android:textAlignment="center"
            android:textColor="#000000" />
    </LinearLayout>
</ScrollView>
