<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2072A4"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp"
        android:background="#2072A4"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/textViewSplash1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/try_again"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="40sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/YOUTUBELINK"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/buttonxml"
            android:text="@string/listen_on_youtube" />

        <View
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/LYRICLINK"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/buttonxml"
            android:text="@string/song_lyrics" />

        <View
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/SAMELEVEL"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/buttonxml"
            android:text="@string/same_level" />

        <View
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/SCORE_BUTTON"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/buttonxml"
            android:text="SCORE" />

    </LinearLayout>
</ScrollView>
